# STM32G474-DigitalPower

./: .gitignore  CMakeLists.txt  G474_1.ioc  README.md
Core/Inc/: FreeRTOSConfig.h  main.h  stm32g4xx_it.h
Core/Src/: adc.c  dma.c  gpio.c  hrtim.c  main.c  spi.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  syscalls.c  tim.c  usart.c
User/components/: CMakeLists.txt
User/components/ADC/: ADC.c
User/components/LOG/: LOG.c  LOG.h
User/components/MPPT/: mppt.h  mppt_internal.h  mppt_routine.c
User/components/UI/: UI.c  UI_anim.c
User/components/console/: console.c  console.h
User/components/display/: display.c  display.h  display_internal.h
User/components/display/lvgl_port/: lv_conf.h  lv_port_disp.c  lv_port_disp.h  lv_port_encoder.c  lv_port_knob.c
User/components/display/stm_sh1107/: sh1107.c  sh1107.h  sh1107_internal.h
User/components/display/stm_ssd1306/: ssd1306.c  ssd1306.h  ssd1306_iic.c  ssd1306_internal.h
User/components/filter/: RC.h  kalman.c  kalman.h
User/components/lvgl_port/: lv_conf.h  lv_port_button.c  lv_port_button.h  lv_port_disp.c  lv_port_disp.h  lv_port_encoder.c  lv_port_encoder.h  lv_port_knob.c  lv_port_knob.h
User/components/pid_ctrl/: PID.h  pid_ctrl.c  pid_ctrl_internal.h  pid_ctrl_main.c
User/components/stm_ssd1306/: ssd1306.c  ssd1306_internal.h  ssd1306_spi.c
User/main/: IO.c  chillbit.c  fusion_pixel_12.c  main.c
